force-app/main/default/objects/Case/fields/CC_VN__c.field-meta.xml
<CustomField>
    <fullName>CC_VN__c</fullName>
    <label>CC VN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>