force-app/main/default/objects/Case/fields/CG_Survey_Trigger__c.field-meta.xml
<CustomField>
    <fullName>CG_Survey_Trigger__c</fullName>
    <label>CG Survey Trigger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>