force-app/main/default/objects/Case/fields/Claim_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Date__c</fullName>
    <description>PM-004974</description>
    <label>Claim Date</label>
    <type>DateTime</type>
</CustomField>