force-app/main/default/objects/Case/fields/Client_number__c.field-meta.xml
<CustomField>
    <fullName>Client_number__c</fullName>
    <formula>Account.Local_CALDER_ID__c</formula>
    <label>Client number</label>
    <type>Text</type>
</CustomField>