force-app/main/default/objects/Case/fields/Close_Date_Time_Objective_1__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Time_Objective_1__c</fullName>
    <description>This Field is used to populate &quot;Close Date / Time Objective&quot; as we need to display this value by using Business Hrs. This is not used in any page layouts, its just a buffer field</description>
    <label>Close Date / Time Objective-1</label>
    <type>DateTime</type>
</CustomField>