force-app/main/default/objects/Case/fields/Close_Date_Time_Objective__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Time_Objective__c</fullName>
    <formula>Close_Date_Time_Objective_1__c

/*
if(Use_BusinessHours__c ,Close_Date_Time_Objective_1__c,CreatedDate + Weekend_Days__c +((((Treatment_Time_Objective__c/24)-FLOOR(Treatment_Time_Objective__c/24))))) 
*/

/*if(OR(RecordTypeId =&apos;01220000000MKGP&apos;, RecordTypeId= 
&apos;012200000009CuR&apos;, 
RecordTypeId =&apos;01220000000MLar&apos;),Close_Date_Time_Objective_1__c,CreatedDate + Weekend_Days__c +((((Treatment_Time_Objective__c/24)-FLOOR(Treatment_Time_Objective__c/24))))) 
*/



/*CreatedDate +  ROUND(Treatment_Time_Objective__c/24,0)+  Week_end_Day_bonus_number__c*/



/*CreatedDate +   Weekend_Days__c  +((((Treatment_Time_Objective__c/24)-FLOOR(Treatment_Time_Objective__c/24))))*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case Open Date + SLA</inlineHelpText>
    <label>Close Date / Time Objective</label>
    <type>DateTime</type>
</CustomField>