force-app/main/default/objects/Case/fields/Closure_confirmation_status__c.field-meta.xml
<CustomField>
    <fullName>Closure_confirmation_status__c</fullName>
    <description>This field is created as part of BR-6190 to enhance the case re-opening process.</description>
    <label>Closure confirmation status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Send email to customer</fullName>
            </value>
            <value>
                <fullName>Waiting for customer feedback</fullName>
            </value>
            <value>
                <fullName>Closure confirmed by customer</fullName>
            </value>
            <value>
                <fullName>No reply from customer</fullName>
            </value>
            <value>
                <fullName>Closure rejected by customer</fullName>
            </value>
            <value>
                <fullName>Service request opening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>