force-app/main/default/objects/Case/fields/Closure_Date_YYYYMM__c.field-meta.xml
<CustomField>
    <fullName>Closure_Date_YYYYMM__c</fullName>
    <formula>IF(MONTH(DATEVALUE(ClosedDate))&lt;10, 
TEXT(YEAR(DATEVALUE(ClosedDate))) &amp; &quot;-&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(DATEVALUE(ClosedDate))), 
TEXT(YEAR(DATEVALUE(ClosedDate))) &amp; &quot;-&quot; &amp; TEXT(MONTH(DATEVALUE(ClosedDate))) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closure Date</label>
    <type>Text</type>
</CustomField>