force-app/main/default/objects/Case/fields/Comment_for_delay__c.field-meta.xml
<CustomField>
    <fullName>Comment_for_delay__c</fullName>
    <description>Created as part of the BR-6053</description>
    <label>Comment for delay</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>