force-app/main/default/objects/Case/fields/Commercial_Gesture__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Gesture__c</fullName>
    <inlineHelpText>Select Yes if a commercial gesture was offered to the customer (discount, gift, additional services, etc.)</inlineHelpText>
    <label>Commercial Gesture</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>