force-app/main/default/objects/Case/fields/Commercial_Gesture_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Gesture_Amount__c</fullName>
    <label>Financial correction Approved amount​</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>