force-app/main/default/objects/Case/fields/Complaint_Closure_type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Closure_type__c</fullName>
    <label>Complaint Closure type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed with customer agreement</fullName>
            </value>
            <value>
                <fullName>Closed without customer disagreement</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Litigation</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>