force-app/main/default/objects/Case/fields/Complaint_Description__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Description__c</fullName>
    <inlineHelpText>Describe the analysis done on the complaint and the conclusion</inlineHelpText>
    <label>Complaint Resolution</label>
    <length>10240</length>
    <type>LongTextArea</type>
</CustomField>