force-app/main/default/objects/Case/fields/Complaint_Dispute__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Dispute__c</fullName>
    <label>Complaint/Dispute?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>