force-app/main/default/objects/Case/fields/Complaint_justified__c.field-meta.xml
<CustomField>
    <fullName>Complaint_justified__c</fullName>
    <inlineHelpText>Flag this field if the complaint was justified. &quot;Error&quot; or &quot;Client exaggeration&quot; are not considered justified.</inlineHelpText>
    <label>Complaint justified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>