force-app/main/default/objects/Case/fields/Complaint_Key_Word__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Key_Word__c</fullName>
    <description>To store the &quot;topic&quot;/classification of the complaint.</description>
    <inlineHelpText>Enter the default keyword corresponding to the root cause of this complaint.</inlineHelpText>
    <label>Complaint Key Word</label>
    <type>TextArea</type>
</CustomField>