force-app/main/default/objects/Case/fields/Complaint_recurrency__c.field-meta.xml
<CustomField>
    <fullName>Complaint_recurrency__c</fullName>
    <label>Complaint recurrency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Recurrent</fullName>
            </value>
            <value>
                <fullName>Unique​</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>