force-app/main/default/objects/Case/fields/Complaint_type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_type__c</fullName>
    <inlineHelpText>Insert a value based on the analysis of the complaint</inlineHelpText>
    <label>Complaint Origin</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Complaint_reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Improper business practices or lack of quality of services/products (provider/supplier)</fullName>
            </value>
            <value>
                <fullName>Price of products/Services</fullName>
            </value>
            <value>
                <fullName>Account or service closure</fullName>
            </value>
            <value>
                <fullName>Behaviour towards the customer</fullName>
            </value>
            <value>
                <fullName>File management</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Information/advice</fullName>
            </value>
            <value>
                <fullName>Malfunction of the product or service</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Setting up/refusal to grant products or services / withdrawal</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Actions or decisions</fullName>
            </value>
            <value>
                <fullName>Inaction or delay</fullName>
            </value>
            <value>
                <fullName>Policy and processes</fullName>
            </value>
            <value>
                <fullName>Quality of the offer</fullName>
            </value>
            <value>
                <fullName>Improper business practices or lack of quality of services/products (ALD)</fullName>
            </value>
            <value>
                <fullName>Improper business practices (ALD)</fullName>
                <isActive>false</isActive>
                <label>Improper business practices (ALD)</label>
            </value>
            <value>
                <fullName>Improper business practices (provider)</fullName>
                <isActive>false</isActive>
                <label>Improper business practices (provider)</label>
            </value>
            <value>
                <fullName>Lack of quality of products/services</fullName>
                <isActive>false</isActive>
                <label>Lack of quality of products/services</label>
            </value>
            <value>
                <fullName>administrative</fullName>
                <isActive>false</isActive>
                <label>administrative</label>
            </value>
            <value>
                <fullName>commercial</fullName>
                <isActive>false</isActive>
                <label>commercial</label>
            </value>
            <value>
                <fullName>operational</fullName>
                <isActive>false</isActive>
                <label>operational</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>