force-app/main/default/objects/Case/fields/ComplaintActionPlan__c.field-meta.xml
<CustomField>
    <fullName>ComplaintActionPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complaint Action Plan</label>
    <referenceTo>Action_Plan__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>