force-app/main/default/objects/Case/fields/Complaints_Reason__c.field-meta.xml
<CustomField>
    <fullName>Complaints_Reason__c</fullName>
    <description>With Belgium Customer Care</description>
    <label>Complaints Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Execution error</fullName>
            </value>
            <value>
                <fullName>Non respect of contract clause</fullName>
            </value>
            <value>
                <fullName>Non conformity of product/service</fullName>
            </value>
            <value>
                <fullName>Misconduct of an internal employee</fullName>
            </value>
            <value>
                <fullName>Misconduct of an external employee</fullName>
            </value>
            <value>
                <fullName>Complaint external</fullName>
            </value>
            <value>
                <fullName>Complaint internal</fullName>
            </value>
            <value>
                <fullName>Disappointment external</fullName>
            </value>
            <value>
                <fullName>Disappointment internal</fullName>
            </value>
            <value>
                <fullName>Protest</fullName>
            </value>
            <value>
                <fullName>Misconduct of ALD or its partners</fullName>
            </value>
            <value>
                <fullName>Data confidentiality</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>ALD employee responsibility</fullName>
            </value>
            <value>
                <fullName>Customer overreacts</fullName>
            </value>
            <value>
                <fullName>Lack of comm between departments</fullName>
            </value>
            <value>
                <fullName>Lack of comm between ALD and supplier</fullName>
            </value>
            <value>
                <fullName>Supplier fault</fullName>
            </value>
            <value>
                <fullName>Soft error</fullName>
            </value>
            <value>
                <fullName>Lack of procedure</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Non standard business practise</fullName>
            </value>
            <value>
                <fullName>Lack of services</fullName>
            </value>
            <value>
                <fullName>Not good customer care</fullName>
            </value>
            <value>
                <fullName>Contract problem</fullName>
            </value>
            <value>
                <fullName>Pricing mistake</fullName>
            </value>
            <value>
                <fullName>Payments issue</fullName>
            </value>
            <value>
                <fullName>Failure to follow the contract</fullName>
            </value>
            <value>
                <fullName>Lack of procedures/organisation</fullName>
            </value>
            <value>
                <fullName>Supplier services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>