force-app/main/default/objects/Case/fields/Compliment__c.field-meta.xml
<CustomField>
    <fullName>Compliment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliment</label>
    <type>Checkbox</type>
</CustomField>