force-app/main/default/objects/Case/fields/Contact_Role_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Email__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <label>Contact Role Email</label>
    <type>Email</type>
</CustomField>