force-app/main/default/objects/Case/fields/Contact_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_Name__c</fullName>
    <label>Contact Role Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>