force-app/main/default/objects/Case/fields/Contact_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Contact_Salutation__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>This field is used in case process builder.There is a problem in processbuilder for accessing related object picklist field.For fixing that created this field</description>
    <formula>TEXT(Contact.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Salutation</label>
    <type>Text</type>
</CustomField>