force-app/main/default/objects/Case/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <formula>Contact.FirstName +&quot;&quot; + Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContactName</label>
    <type>Text</type>
</CustomField>