force-app/main/default/objects/Case/fields/Contract_60_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_60_Months__c</fullName>
    <label>Contract &gt; 60 Months?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>