force-app/main/default/objects/Case/fields/Contract_Model__c.field-meta.xml
<CustomField>
    <fullName>Contract_Model__c</fullName>
    <formula>Contract__r.Model__c</formula>
    <label>Contract  Model</label>
    <type>Text</type>
</CustomField>