force-app/main/default/objects/Case/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <description>To use as a merged field in Templates. Belgium requires that we show only the Contract Name (Plate) and not the value in the existing Veh reg number, which is a combination of contract number and plate. This field will be hidden from the PL</description>
    <formula>Contract__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ContractName</label>
    <type>Text</type>
</CustomField>