force-app/main/default/objects/Case/fields/Contract_type__c.field-meta.xml
<CustomField>
    <fullName>Contract_type__c</fullName>
    <description>Austria Customer Care</description>
    <formula>Text (Contract__r.Contract_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract type</label>
    <type>Text</type>
</CustomField>