force-app/main/default/objects/Case/fields/Contract_Vin_No__c.field-meta.xml
<CustomField>
    <fullName>Contract_Vin_No__c</fullName>
    <description>PM-003347</description>
    <formula>Contract__r.Vin_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Vin No</label>
    <type>Text</type>
</CustomField>