force-app/main/default/objects/Case/fields/ContractDriver__c.field-meta.xml
<CustomField>
    <fullName>ContractDriver__c</fullName>
    <formula>Contract__r.Driver__c</formula>
    <label>ContractDriver</label>
    <type>Text</type>
</CustomField>