force-app/main/default/objects/Case/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <formula>Contract__r.ContractNumber</formula>
    <label>ContractNumber</label>
    <type>Text</type>
</CustomField>