force-app/main/default/objects/Case/fields/Copy_of_contract_name__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_contract_name__c</fullName>
    <formula>Contract__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Copy of contract name</label>
    <type>Text</type>
</CustomField>