force-app/main/default/objects/Case/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>This is the time spent taking care of the case.</description>
    <label>Cost</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 min</fullName>
            </value>
            <value>
                <fullName>60 min</fullName>
            </value>
            <value>
                <fullName>90 min</fullName>
            </value>
            <value>
                <fullName>120 min</fullName>
            </value>
            <value>
                <fullName>150 min</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>