force-app/main/default/objects/Case/fields/Cost_New__c.field-meta.xml
<CustomField>
    <fullName>Cost_New__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>