force-app/main/default/objects/Case/fields/Cost_Of_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Cost_Of_Repairs__c</fullName>
    <description>Reviewed in June 2020. Reviewed during CCCM</description>
    <label>Cost Of Repairs</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>