force-app/main/default/objects/Case/fields/Creation_Date_YYYYMM__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date_YYYYMM__c</fullName>
    <formula>IF(MONTH(DATEVALUE(CreatedDate))&lt;10, 
TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &quot;-&quot; &amp; &quot;0&quot; &amp; TEXT(MONTH(DATEVALUE(CreatedDate))), 
TEXT(YEAR(DATEVALUE(CreatedDate))) &amp; &quot;-&quot; &amp; TEXT(MONTH(DATEVALUE(CreatedDate))) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creation Date</label>
    <type>Text</type>
</CustomField>