force-app/main/default/objects/Case/fields/CSE__c.field-meta.xml
<CustomField>
    <fullName>CSE__c</fullName>
    <formula>Account.CSE__r.Full_Name__c</formula>
    <label>CSE</label>
    <type>Text</type>
</CustomField>