force-app/main/default/objects/Case/fields/CSE_ID__c.field-meta.xml
<CustomField>
    <fullName>CSE_ID__c</fullName>
    <formula>Account.CSE__c</formula>
    <label>CSE ID</label>
    <type>Text</type>
</CustomField>