force-app/main/default/objects/Case/fields/Current_milleage__c.field-meta.xml
<CustomField>
    <fullName>Current_milleage__c</fullName>
    <label>Current milleage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>