force-app/main/default/objects/Case/fields/Current_Workflow_Step_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Workflow_Step_ID__c</fullName>
    <label>Current Workflow Step ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>