force-app/main/default/objects/Case/fields/Customer_Credit_amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Credit_amount__c</fullName>
    <formula>BLANKVALUE( Actual_Operational_loss_amount__c , 0)  +  BLANKVALUE( Actual_Commercial_gesture_amount__c  , 0)  +  BLANKVALUE(Recovered_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Credit amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>