force-app/main/default/objects/Case/fields/Customer_fleet_size__c.field-meta.xml
<CustomField>
    <fullName>Customer_fleet_size__c</fullName>
    <label>Customer fleet size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>