force-app/main/default/objects/Case/fields/Customer_litigation__c.field-meta.xml
<CustomField>
    <fullName>Customer_litigation__c</fullName>
    <label>Customer litigation​</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>