force-app/main/default/objects/Case/fields/Customer_Service_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Account_Owner__c</fullName>
    <formula>Account.Customer_Service_Account_Owner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Service Account Owner</label>
    <type>Text</type>
</CustomField>