force-app/main/default/objects/Case/fields/Damage_file_number__c.field-meta.xml
<CustomField>
    <fullName>Damage_file_number__c</fullName>
    <label>Damage File Number</label>
    <length>120</length>
    <type>Text</type>
</CustomField>