force-app/main/default/objects/Case/fields/Data_Integration_Date__c.field-meta.xml
<CustomField>
    <fullName>Data_Integration_Date__c</fullName>
    <label>Data Integration Date</label>
    <type>DateTime</type>
</CustomField>